# Gaslighting-Is-All-You-Need

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.json  debug_main.py  install.sh  main.py  pyproject.toml  requirements.txt  test_wizard_simples.py  testar_interface.py  uninstall.sh  user_config.json  user_state.json  verificar_integridade.py
luna/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMPLIANCE.md  Dockerfile  INDEX.md  PENDENCIAS.md  README.md  config.py  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  requirements-ci.txt  requirements.txt  requirements_tts.txt  run_dashboard.py  run_interface_web.sh  run_luna.sh  run_luna_onboarding.sh  run_tests.py  uninstall.sh
luna/.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml  labeler.yml
luna/.github/ISSUE_TEMPLATE/: bug.yml  task.yml
luna/.github/workflows/: auto-assign.yml  auto-label-pr.yml  ci.yml  pr-check.yml  project-automation.yml  todo-to-issues.yml
luna/dev-journey/: 2025-12-29_Session_Summary.md
luna/dev-journey/01-getting-started/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  QUICK_START.md  STYLE_GUIDE.md  TECH_STACK.md
luna/dev-journey/02-vision/: ROADMAP.md  WHAT_WE_ARE_BUILDING.md  WHERE_WE_WANT_TO_GO.md
luna/dev-journey/03-changelog/: 2024-12-20_Session_Summary.md  2024-12-21_Session_Summary.md  2025-12-22_Session_Summary.md  2025-12-24_Session_Summary.md  2025-12-24_Session_Summary_2.md  2025-12-25_entity_onboarding_integration.md  2025-12-25_entity_selector_canone_integration.md  2025-12-26_Session_Summary.md  2025-12-26_bugfix_multi_entity.md  2025-12-27_Session_Summary_2.md  2025-12-28_Session_Summary.md  2025-12-29_etapa07_universal_llm.md  2025-12-29_etapa08_type_hints.md  2025-12-29_etapa09_index_md.md  2025-12-29_etapa10_constants.md  2025-12-29_etapa11_memory_tiers.md  2025-12-29_etapa12_streaming.md  2025-12-29_etapa13_ai_friendliness.md  2025-12-29_etapa14_web_dashboard.md  2025-12-29_etapa15_finalizacao.md  2025-12-29_fix_memory_locks.md  2025-12-29_fix_shutdown_precommit.md  2025-12-29_fix_silent_exceptions.md  2025-12-30_AUDITORIA_EXTERNA.md  2025-12-30_AUDITORIA_EXTERNA_ORIGINAL.md  CHANGELOG.md  v1.0.0.md  v2.0.0.md  v3.0.0.md
luna/dev-journey/04-implementation/: APP_STATE_MACHINE.md  ARCHITECTURE_DNA.md  ARCHITECTURE_LLM.md  ARCHITECTURE_THREADING.md  COMPLETED_FEATURES.md  CONSCIENCIA_REFACTOR.md  CONTEXT_WINDOW.md  CURRENT_STATUS.md  DEPENDENCY_INJECTION.md  DEPENDENCY_MAP.md  ENTITY_STRUCTURE.md  ENTITY_SWAP_ARCHITECTURE.md  IN_PROGRESS.md  MEMORY_INTERFACE.md  MODULARIZATION_PLAN.md  OLLAMA_UNLEASHED.md  ONBOARDING_ENTITY_FLOW.md  ONBOARDING_RITUAL.md  PANTHEON_SYSTEM.md  PLACEHOLDERS.md  RAM_DISK_AUDIO.md  SCORECARD.md  TERMINAL_SANDBOX.md  TTS_DAEMON.md  TTS_STRATEGY_PATTERN.md  TUI_OPTIMIZATION.md  VOICE_TRAINER_INTEGRATION.md
luna/dev-journey/05-future/: FUTURE_IMPLEMENTATIONS.md  IDEAS_BACKLOG.md  ONBOARDING_FLOW.md  PLANNED_FEATURES.md  TECHNICAL_DEBT.md
luna/dev-journey/06-guides/: AUDIO_SETUP.md  CODE_STYLE.md  CONTRIBUTING.md  DEBUGGING.md  GEMINI_LIVE.md  (+8 more)
luna/scripts/: check_modularization_progress.sh  cleanup_obsolete.sh  health_check.sh  tts_daemon.sh  validate_docs.sh
(+656 files in other folders)
