[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gaslighting-is-all-you-need"
version = "1.0.0"
description = "Framework NLP/AI com módulos núcleo, implantes e modelos locais"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python>=0.2.55",
    "customtkinter>=5.2.0",
    "packaging>=23.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.scripts]
gaslighting = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nucleo*", "interface*", "utilitarios*", "implantes*", "modelos*"]
